# deribit-vol-model

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml
notebooks/: 01_exploration.py  02_surface_fitting.py  03_backtest.py
src/: __init__.py
src/backtest/: backtest_runner.py
src/cleaning/: __init__.py  options_cleaner.py
src/cli/: main.py
src/data/: fetch_deribit.py
src/distribution/: __init__.py  risk_neutral_density.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  forward_curve.py  signals.py  spot_forecast.py
src/pricing/: __init__.py  contracts.py  digitals.py
src/surface/: __init__.py  iv_surface.py
src/utils/: black_scholes.py  config.py  forecast_plots.py  time_utils.py  visualization.py
tests/: test_black_scholes.py  test_contracts.py  test_density.py  test_forward_curve.py  test_integration.py  test_metrics.py  test_signals.py  test_time_utils.py
